Created better UI for the calculator: - centered the calculator - set sizes and colors for buttons and display - set hover effect for buttons
Created functionality for sign-buttons.

--- a/web-calculator/index.html
+++ b/web-calculator/index.html
@@ -13,7 +13,7 @@
 <div id="calculator-container">
     <div id="calculator-display">
         <form action="">
-            <label for="calculator-expression">Expression:</label><br>
+            <label for="calculator-expression"></label>
             <input type="text" id="calculator-expression" name="calculator-expression" value="">
         </form>
     </div>
