- Created functionality for parenthesis buttons - Added open parenthesis counter
- Missing "." functionality and "=" functionality

--- a/web-calculator/index.html
+++ b/web-calculator/index.html
@@ -26,10 +26,10 @@
                 <button onclick="on_end_paranthese_button_click(')')">)</button>
             </div>
             <div class="calculator-button">
-                <button onclick="on_sign_operator_click('')">%</button>
+                <button onclick="on_delete_button_click('')">del</button>
             </div>
             <div class="calculator-button">
-                <button onclick="on_delete_button_click('')">ce</button>
+                <button onclick="on_ce_button_click('')">ce</button>
             </div>
         </div>
         <div class="row">
@@ -89,7 +89,11 @@
             </div>
         </div>
     </div>
+    <div id="calculator-result">
+        2
+    </div>
 </div>
+
 
 
 <script src="js/main.js"></script>
