Search input in the top

--- a/trello/index.html
+++ b/trello/index.html
@@ -10,11 +10,16 @@
 <body>
 <div id="content">
     <header>
-      <div id="home">
-          <button>
-              <img id="home-button" src="imgs/home.png">
-          </button>
-      </div>
+        <div id="home-button-container">
+            <div id="home-button-div">
+                <button id="home-button">
+                    <img id="home-button-img" src="imgs/home.png">
+                </button>
+            </div>
+        </div>
+        <div id="search-div">
+            <input id="search-input" type="search">
+        </div>
     </header>
     <div id="main">
         <nav>
@@ -28,7 +33,7 @@
                     </div>
                     <div class="list-card">
                         <div class="list-card-content">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                         </div>
                     </div>
                 </div>
