color over the list card

--- a/trello/index.html
+++ b/trello/index.html
@@ -32,6 +32,9 @@
                         <h4>List Name 1</h4>
                     </div>
                     <div class="list-card">
+                        <div class="list-card-color">
+                            <span></span>
+                        </div>
                         <div class="list-card-content">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                         </div>
