Fixed padding and margins for colors in cards

--- a/trello/index.html
+++ b/trello/index.html
@@ -13,7 +13,9 @@
         <div id="home-button-container">
             <div id="home-button-div">
                 <button id="home-button">
-                    <img id="home-button-img" src="imgs/home.png">
+                    <a href="index.html">
+                        <img id="home-button-img" src="imgs/home.png">
+                    </a>
                 </button>
             </div>
         </div>
@@ -25,33 +27,54 @@
         <nav>
             <h1>Board Name</h1>
         </nav>
-        <div id="list-container">
+        <div id="lists-container">
             <div class="list">
                 <div class="list-content">
                     <div class="list-name">
-                        <h4>List Name 1</h4>
+                        <h4>TO DOs</h4>
                     </div>
                     <div class="list-card">
-                        <div class="list-card-color">
-                            <span></span>
+                        <div id="111111" class="list-card-color">
                         </div>
                         <div class="list-card-content">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="list">
-                <div class="list-content">
-                    <div class="list-name">
-                        <h4>List Name 2</h4>
+                    <div class="list-card">
+                        <div class="list-card-color-container">
+                            <div id="111112" class="list-card-color">
+                                <!--<span></span>-->
+                            </div>
+                            <div id="111113" class="list-card-color">
+                                <!--<span></span>-->
+                            </div>
+                        </div>
+                        <div class="list-card-content">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                        </div>
+                    </div>
+                    <div>
+                        <h5>+ Add card</h5>
                     </div>
                 </div>
             </div>
             <div class="list">
                 <div class="list-content">
                     <div class="list-name">
-                        <h4>List Name 3</h4>
+                        <h4>Doing</h4>
+                    </div>
+                    <div>
+                        <h5>+ Add card</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="list">
+                <div class="list-content">
+                    <div class="list-name">
+                        <h4>Done</h4>
+                    </div>
+                    <div>
+                        <h5>+ Add card</h5>
                     </div>
                 </div>
             </div>
