Game of life init and GooglePhotosUploadApp

--- a/trello/index.html
+++ b/trello/index.html
@@ -34,7 +34,7 @@
                         <h4>TO DOs</h4>
                     </div>
                     <div class="list-card">
-                        <div id="111111" class="list-card-color">
+                        <div class="list-card-color">
                         </div>
                         <div class="list-card-content">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
@@ -42,10 +42,10 @@
                     </div>
                     <div class="list-card">
                         <div class="list-card-color-container">
-                            <div id="111112" class="list-card-color">
+                            <div class="list-card-color">
                                 <!--<span></span>-->
                             </div>
-                            <div id="111113" class="list-card-color">
+                            <div class="list-card-color">
                                 <!--<span></span>-->
                             </div>
                         </div>
@@ -54,7 +54,9 @@
                         </div>
                     </div>
                     <div>
-                        <h5>+ Add card</h5>
+                        <button class="add-card-button">
+                            + Add card
+                        </button>
                     </div>
                 </div>
             </div>
@@ -64,7 +66,9 @@
                         <h4>Doing</h4>
                     </div>
                     <div>
-                        <h5>+ Add card</h5>
+                        <button class="add-card-button">
+                            + Add card
+                        </button>
                     </div>
                 </div>
             </div>
@@ -74,13 +78,17 @@
                         <h4>Done</h4>
                     </div>
                     <div>
-                        <h5>+ Add card</h5>
+                        <button class="add-card-button">
+                            + Add card
+                        </button>
                     </div>
                 </div>
+                <p id="demo"></p>
             </div>
         </div>
     </div>
 </div>
+<script type="text/javascript" src="js/add-card-button.js"></script>
 </body>
 
 </html>
